# areal_ir_localization

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml
code_generator/: generator.py
code_generator/codes/: codebook_12.csv  codebook_13.csv  codebook_16.csv  codebook_4.csv  codebook_7.csv  codebook_8.csv  codebook_9.csv  lookup_table_12.csv  lookup_table_13.csv  lookup_table_16.csv  lookup_table_4.csv  lookup_table_7.csv  lookup_table_8.csv  lookup_table_9.csv
config/: algorithm_params.yaml  beacon_msg_12_lookup.yaml  beacon_pos_lookup.yaml  cam_msg_params.yaml  debug_params.yaml  gimbal_params.yaml
include/areal_ir_localization/: beacon.hpp  rotationMat2Quaternion.hpp  tracker_structs.hpp  utility.hpp
launch/: ir_localization.launch.py  ir_localization_px4.launch.py
src/: ir_localization.cpp
